--- a/mystage/02-unbound-sinkhole/files/sinkhole.conf
+++ b/mystage/02-unbound-sinkhole/files/sinkhole.conf
@@ -1,3 +1,6 @@
+remote-control:
+    control-enable: yes
+
 server:
     # If no logfile is specified, syslog is used
     # logfile: "/var/log/unbound/unbound.log"
